--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@ body {
   height: 520px;
   background-color: white;
   border-radius: 16px;
+  box-shadow: 0px 15px 31px 4px rgba(0, 0, 0, 0.1);
+
 
   display: flex;
   flex-direction: column;
@@ -24,10 +26,24 @@ body {
   height: 300px;
   border-radius: 16px;
   display: flex;
+  height: auto;
+  width: 90%;
+}
+
+.attribution {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 140px;  
+}
+
+.attribution a {
+  margin-left: 4px;
 }
 
 h1 {
   font-size: 25px;
+  font-weight: 600;
   max-width: 82%;
 }
 
@@ -35,6 +51,7 @@ p {
   color: grey;
   max-width: 75%;
   margin-top: 0;
+  font-weight: 400;
 }
 
 @media (max-width: 375px) {
