--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,49 @@
+@import "https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap";
+
 body {
   background-color: hsl(212, 45%, 89%);
   font-family: 'Outfit', sans-serif;
+
+  /* To center the elements  */
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .background {
-  width: 350px;
-  height: 520px;
+  width: 22rem;
   background-color: white;
-  border-radius: 16px;
+  border-radius: 1rem;
   box-shadow: 0px 15px 31px 4px rgba(0, 0, 0, 0.1);
-
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: auto;
   text-align: center;
-  margin-top: 8%;
-  gap: 1px;
+  padding: 1rem;
 }
 
 .qrcodeImage {
-  width: 312px;
-  height: 300px;
-  border-radius: 16px;
-  display: flex;
-  height: auto;
-  width: 90%;
+  width: 100%;
+  border-radius: 1.6rem;
 }
 
 .attribution {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 140px;  
+  margin-top: 9rem;
 }
 
 .attribution a {
-  margin-left: 4px;
+  margin-left: 0.25rem;
 }
 
 h1 {
-  font-size: 25px;
+  font-size: 1.5rem;
   font-weight: 600;
   max-width: 82%;
 }
@@ -50,12 +51,11 @@ h1 {
 p {
   color: grey;
   max-width: 75%;
-  margin-top: 0;
   font-weight: 400;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 500px) {
   .background {
-    margin-top: 80px;
+    width: 80%;
   }
 }
